@@ -1,3 +1,7 @@
+## Edge
+
+* Remove svndump feature.
+
 ## 0.4.7 - 2023-06-30
 
 * Hotfix.
